--- a/res/html/css/basic.css
+++ b/res/html/css/basic.css
@@ -46,17 +46,28 @@ input[type="text"], input[type="password"], textarea, select {
 * html, body, a, h1-3, .cb */
 
 html {
-  height: 100%;       /* For FF and Opera: background-image will centered vertically */
+/*  height: 100%;        For FF and Opera: background-image will centered vertically */
   overflow-y: scroll; /* There is a scroll-bar in any case */
 }
 body {
-  background:#ff8c00;
-  background-image:url(background/typo3.gif);
-  color:#000;
-  font-family: Trebuchet MS, Geneva, Arial, Helvetica, Verdana, sans serif;
-  font-size: .85em;
-  height: 100%;
   margin: 0 auto;
+  background-color: rgb(114,112,111); /* Old browsers */
+  background: -moz-linear-gradient(top, #444 0%, rgb(114,112,111) 50%, rgb(114,112,111) 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#444), color-stop(50%,#72706f), color-stop(100%,#72706f)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, #444 0%, rgb(114,112,111) 50%, rgb(114,112,111) 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, #444 0%, rgb(114,112,111) 50%, rgb(114,112,111) 100%); /* Opera11.10+ */
+  background: -ms-linear-gradient(top, #444 0%, rgb(114,112,111) 50%, rgb(114,112,111) 100%); /* IE10+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#444444', endColorstr='#72706f',GradientType=0 ); /* IE6-9 */
+  background: linear-gradient(top, #444 0%, rgb(114,112,111) 50%, rgb(114,112,111) 100%); /* W3C */
+
+  color: #333;
+  font-family: 'DejaVu Sans Condensed', Trebuchet MS, Geneva, Arial, Helvetica, Verdana, sans-serif;
+  font-size: 81%;
+  -webkit-text-size-adjust: 81%;
+  -ms-text-size-adjust: 81%;
+
+  position: relative;
+  width: 100%;
 }
 h1, h2, h3 {
   font-size: 1em;
@@ -87,25 +98,33 @@ a:hover {
 *
 * wraps */
 
+#wrap-outer {
+  background: transparent url("background/typo3_netzmacher_background.png") scroll center repeat;
+  min-height: 98%;
+  padding: 2% 0;
+}
 #wrap-horizontal {
   background-color:white;
-  background-image:url("background/wrap-horizontal.gif");
+  background-image:url("background/wrap-horizontal_02.gif");
   background-repeat:repeat-y;
   margin: 0 auto;
   min-height: 100%;
   position: relative;
   width: 1000px;
+  -moz-box-box-shadow: 5px 5px 25px #222;
+  -webkit-box-shadow: 5px 5px 25px #222;
+  box-shadow: 5px 5px 25px #222;
 }
 
 #wrap-vertical {
-  border-top: 1em solid #ff8c00;
-  padding-bottom:6.4em;
+/*  border-top: 6em solid #ff8c00;*/
+  padding-bottom:2em;
   position: relative;
   width:1000px;
 }
 #wrap-box {
-  border: 1px solid white;
-  border-bottom:0;
+/*  border: 1px solid white;
+  border-bottom:0;*/
   position: relative;
 }
 #offset-top {
@@ -121,7 +140,7 @@ a:hover {
 
 #header {
   background:#f66800;
-  border-bottom:1px solid white;
+/*  border-bottom:1px solid white;*/
   color: white;
   font-size: 2em;
   height:44px;
@@ -154,11 +173,11 @@ input.ui-button {
   width:210px;
 }
 #footer {
-  background:#ff8c00;
-  border-top:1px solid white;
+  background:#f66800;
+/*  border-top:1px solid white;*/
   bottom:0;
   color: #000;
-  height:6.4em;
+/*  height:6.4em;*/
   padding:1em 0 0 0;
   position:absolute;
   text-align:center;
