--- a/res/html/css/basic.css
+++ b/res/html/css/basic.css
@@ -138,7 +138,7 @@ a:hover {
 *
 * elements */
 
-#old-header {
+#header {
   background:#f66800;
 /*  border-bottom:1px solid white;*/
   color: white;
@@ -150,7 +150,7 @@ a:hover {
   width:210px;
 }
 
-#header {
+#header2 {
 /*    background-color: rgb(236,146,26); */
     color: #fff;
 /*    #00001, 120902, dwildt, 1- */
