--- a/res/html/css/basic.css
+++ b/res/html/css/basic.css
@@ -231,6 +231,16 @@ h1 {
 h2 {
   font-size:1.4em;
 }
+h1.align-center, 
+h2.align-center,
+h3.align-center {
+  text-align:center;
+}
+h1.align-right, 
+h2.align-right,
+h3.align-right {
+  text-align:right;
+}
 #menue a,
 #menue a:link,
 #menue a:visited,
