--- a/res/html/css/basic.css
+++ b/res/html/css/basic.css
@@ -170,7 +170,7 @@ a:hover {
         float: right;
         height: 130px;
 /*        margin-left: -5px;*/
-        padding: 0 20px 0 21px;
+        padding: 14px 20px 0 21px;
         width: 191px;
     }
     /*#00001, 120902, dwildt+*/
