--- a/res/html/css/basic.css
+++ b/res/html/css/basic.css
@@ -118,7 +118,6 @@ a:hover {
 
 #wrap-vertical {
 /*  border-top: 6em solid #ff8c00;*/
-  padding-bottom:2em;
   position: relative;
   width:1000px;
 }
@@ -207,12 +206,9 @@ input.ui-button {
 }
 #footer {
   background:#EC921A;
-/*  border-top:1px solid white;*/
-  bottom:0;
   color: #000;
 /*  height:6.4em;*/
-  padding:1em 0 0 0;
-  position:absolute;
+  padding:1em 0 .1em 0;
   text-align:center;
   width:1000px;
 }
