--- a/res/html/css/basic.css
+++ b/res/html/css/basic.css
@@ -214,7 +214,7 @@ input.ui-button {
 }
 #slider {
   background:#F79210;
-  background-image:url("background/wrap-horizontal_04.gif");
+  background-image:url("background/typo3_slider_w770px_h130px.png");
   background-repeat:repeat-y;
   color: white;
 }
