--- a/res/html/css/basic.css
+++ b/res/html/css/basic.css
@@ -118,13 +118,15 @@ a:hover {
 
 #wrap-vertical {
 /*  border-top: 6em solid #ff8c00;*/
+  background-color:white;
+  background-image:url("background/wrap-horizontal_04.gif");
+  background-repeat:repeat-y;
   position: relative;
   width:1000px;
 }
 #wrap-box {
 /*  border: 1px solid white;
   border-bottom:0;*/
-  background:white;
   position: relative;
 }
 /* wraps */
