--- a/res/html/css/basic.css
+++ b/res/html/css/basic.css
@@ -32,6 +32,7 @@ body {
   -moz-box-box-shadow: 5px 5px 25px #222;
   -webkit-box-shadow: 5px 5px 25px #222;
   box-shadow: 5px 5px 25px #222;
+  height:100%;
 }
 
 #wrap-vertical {
