--- a/res/html/css/basic.css
+++ b/res/html/css/basic.css
@@ -1,7 +1,6 @@
 html {
-/*  height:auto;
-  min-height:100%;*/
-  height:100%;
+  height:auto;
+  min-height:100%;
 }
 body {
   margin: 0 auto;
@@ -23,20 +22,17 @@ body {
 
 #wrap-outer {
   background: transparent url("background/typo3_netzmacher_background.png") scroll center repeat;
-/*  min-height: 96%;
-  padding: 2% 0;*/
-  height:100%;
+  min-height: 96%;
+  padding: 2% 0;
 }
 #wrap-horizontal {
   background-color:#F79210;
   -moz-box-box-shadow: 5px 5px 25px #222;
   -webkit-box-shadow: 5px 5px 25px #222;
   box-shadow: 5px 5px 25px #222;
-  height:100%;
 }
 
 #wrap-vertical {
-  height:100%;
 }
 /* wraps */
 
@@ -62,7 +58,6 @@ body {
 #content {
   background-color:#FFF;
   padding-top:1em;
-  height:100%;
 }
 #content ul#record-browser {
   margin: 0;
@@ -75,7 +70,6 @@ input.ui-button {
 }
 #menue {
   padding-top:1em;
-  height:100%;
 }
 
 #footer {
