--- a/res/html/css/basic.css
+++ b/res/html/css/basic.css
@@ -60,6 +60,9 @@ body {
   background-color:#FFF;
   padding-top:1em;
 }
+#content .columns {
+  background-color:#FFF;
+}
 #content ul#record-browser {
   margin: 0;
 }
