--- a/res/html/css/basic.css
+++ b/res/html/css/basic.css
@@ -228,7 +228,7 @@ button.expand,
 #content .row {
   background-color:#FFF;
 }
-#content .accordio-navigation .row {
+#content .accordion-navigation .row {
     background: #E8E8E8;
 }
 
