--- a/res/html/css/basic.css
+++ b/res/html/css/basic.css
@@ -231,9 +231,11 @@ button.expand,
 #content .accordion-navigation .row {
   background: #EFEFEF;
 }
-#content .accordion-navigation:hover .row,
 #content .accordion-navigation.active .row {
   background: #E8E8E8;
+}
+#content .accordion-navigation:hover .row {
+  background: #E3E3E3
 }
 #content .accordion-navigation .content .row {
   background: #FFF;
