--- a/res/html/css/basic.css
+++ b/res/html/css/basic.css
@@ -1,3 +1,11 @@
+@media print
+{
+  .no-print, .no-print *
+  {
+    display: none !important;
+  }
+}
+
 html {
   height:auto;
   min-height:100%;
