--- a/res/html/css/basic.css
+++ b/res/html/css/basic.css
@@ -237,18 +237,21 @@ button.expand,
 
 button, .button {
   background-color: #f79210;
+  border-color: #cc7607;
 }
 button:hover, button:focus, .button:hover, .button:focus {
   background-color: #cc7607;
 }
 button.disabled, button[disabled], .button.disabled, .button[disabled] {
   background-color: #f79210;
+  border-color: #cc7607;
 }
 button.disabled:hover, button.disabled:focus, button[disabled]:hover, button[disabled]:focus, .button.disabled:hover, .button.disabled:focus, .button[disabled]:hover, .button[disabled]:focus {
   background-color: #f79210;
 }
 ul.pagination li.current a, ul.pagination li.current button {
   background: #f79210;
+  border-color: #cc7607;
 }
 ul.pagination li.current a:hover, ul.pagination li.current a:focus, ul.pagination li.current button:hover, ul.pagination li.current button:focus {
   background: #f79210;
