--- a/res/html/css/basic.css
+++ b/res/html/css/basic.css
@@ -133,6 +133,21 @@ h3.align-right,
 p.align-right  {
   text-align:right;
 }
+a,
+a:link,
+a:visited {
+  color: #f79210;
+  text-decoration:none;
+}
+a:active,
+a:focus,
+a:hover {
+  color: #cc7607;
+}
+#footer p {
+  margin-bottom:0;
+}
+
 #menue a,
 #menue a:link,
 #menue a:visited,
@@ -144,9 +159,6 @@ p.align-right  {
 #footer a:visited {
   color:white;
   text-decoration:none;
-}
-#footer p {
-  margin-bottom:0;
 }
 #menue a:active,
 #menue a:focus,
